--- a/cv.html
+++ b/cv.html
@@ -2,20 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Evelyn Pidcock</title>
+    <title>Evelyn Pidcock | CV</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav id="navbar" class="sticky">
       <ul id="navlist">
-        <li><a href="#" id="navActive">Main</a></li>
+        <li><a href="index.html">Main</a></li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a href="research.html">Research</a></li>
-        <li><a href="cv.html">CV</a></li>
+        <li><a href="#" id="navActive">CV</a></li>
       </ul>
     </nav>
 
-    <h1>Evelyn Pidcock</h1>
+    <h1>CV</h1>
 
     <footer>
       <h2 class="name">Evelyn Pidcock</h2>
