--- a/teaching.html
+++ b/teaching.html
@@ -6,17 +6,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav id="navbar" class="sticky">
-      <ul id="navlist">
-        <li><a href="index.html">Main</a></li>
-        <li><a href="#" id="navActive">Teaching</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="cv.html">CV</a></li>
-      </ul>
-    </nav>
+    <div id="page-container">
+      <nav id="navbar" class="sticky">
+        <ul id="navlist">
+          <li><a href="index.html">Main</a></li>
+          <li><a href="#" id="navActive">Teaching</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="cv.html">CV</a></li>
+        </ul>
+      </nav>
+      <div id="content-wrap">
+        <h1>Teaching</h1>
 
-    <h1>Teaching</h1>
 
+      </div>
+    </div>
     <footer>
       <h2 class="name">Evelyn Pidcock</h2>
       <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
