fix header and footer

--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="page-container">
-      <nav id="navbar" class="sticky">
+      <nav id="navbar">
         <ul id="navlist">
           <li><a href="index.html">Main</a></li>
           <li><a href="teaching.html">Teaching</a></li>
@@ -20,11 +20,11 @@
 
 
       </div>
+      <footer>
+        <h2 class="name">Evelyn Pidcock</h2>
+        <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
+        <p>ejpidcock [at] ucdavis [dot] edu</p>
+      </footer>
     </div>
-    <footer>
-      <h2 class="name">Evelyn Pidcock</h2>
-      <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-      <p>ejpidcock [at] ucdavis [dot] edu</p>
-    </footer>
   </body>
 </html>
