--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div id="content-wrap">
         <h1>Evelyn Pidcock</h1>
 
+        <p>Hello! If you're seeing this, that means this page is still under construction. Check back later!</p>
 
 
 
