better header/footer formatting

--- a/teaching.html
+++ b/teaching.html
@@ -9,10 +9,10 @@
     <div id="page-container">
       <nav id="navbar">
         <ul id="navlist">
-          <li><a href="index.html">Main</a></li>
-          <li><a href="#" id="navActive">Teaching</a></li>
-          <li><a href="research.html">Research</a></li>
           <li><a href="cv.html">CV</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="#" id="navActive">Teaching</a></li>
+          <li><a href="index.html">Main</a></li>
         </ul>
       </nav>
       <div id="content-wrap">
@@ -21,9 +21,8 @@
 
       </div>
       <footer>
-        <h2 class="name">Evelyn Pidcock</h2>
+        <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p>ejpidcock [at] ucdavis [dot] edu</p>
       </footer>
     </div>
   </body>
