Add embedded cv

--- a/cv.html
+++ b/cv.html
@@ -17,8 +17,13 @@
       </nav>
       <div id="content-wrap">
         <h1>CV</h1>
-
-
+        <p id="main-block">
+          Embedded below is a (hopefully) current copy of my CV. See the date at the bottom of the document to see when it was last updated.
+          If the embedding appears as a blank box, try refreshing the page. If that still doesn't work, <a href="https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf">here is a link</a> to download the pdf.
+        </p>
+        <center>
+          <iframe src="https://docs.google.com/viewer?url=https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf&embedded=true" style="width:600px; height:500px;"></iframe>
+        </center>
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
