minor cv style change

--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
           If the embedding appears as a blank box, try refreshing the page. If that still doesn't work, <a href="https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf">here is a link</a> to download the pdf.
         </p>
         <center>
-          <iframe src="https://docs.google.com/viewer?url=https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf&embedded=true" style="width:600px; height:500px;"></iframe>
+          <iframe src="https://docs.google.com/viewer?url=https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf&embedded=true" style="width:75%; height:500px;"></iframe>
         </center>
       </div>
       <footer>
