Add "misc" page; update "research" page

--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,7 @@
     <div id="page-container">
       <nav id="navbar">
         <ul id="navlist">
+          <li><a href="etc.html">etc</a></li>
           <li><a href="#" id="navActive">CV</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="teaching.html">Teaching</a></li>
@@ -18,11 +19,11 @@
       <div id="content-wrap">
         <h1>CV</h1>
         <p id="main-block">
-          Embedded below is a (hopefully) current copy of my CV. See the date at the bottom of the document to see when it was last updated.
-          If the embedding appears as a blank box, try refreshing the page. If that still doesn't work, <a href="https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf">here is a link</a> to download the pdf.
+          Embedded below is a (hopefully) current copy of my CV. Check the date at the bottom of the document to see when it was last updated.
+          If the embedding appears as a blank box, try refreshing the page. If that still doesn't work, <a href="https://github.com/EvePidcock/CV-TeX/raw/main/EvelynPidcockCV.pdf">here is a link</a> to download the pdf.
         </p>
         <center>
-          <iframe src="https://docs.google.com/viewer?url=https://github.com/EvePidcock/CV-TeX/raw/main/template.pdf&embedded=true" style="width:75%; height:500px;"></iframe>
+          <iframe src="https://docs.google.com/viewer?url=https://github.com/EvePidcock/CV-TeX/raw/main/EvelynPidcockCV.pdf&embedded=true" style="width:75%; height:500px;"></iframe>
         </center>
       </div>
       <footer>
