--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="page-container">
       <nav id="navbar">
         <ul id="navlist">
+          <li><a href="etc.html">etc</a></li>
           <li><a href="cv.html">CV</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="teaching.html">Teaching</a></li>
@@ -19,8 +20,11 @@
         <h1>Evelyn Pidcock</h1>
 
         <p>Hello! If you're seeing this, that means this page is still under construction. Check back later!</p>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-
+        <hr>
+        <p style="text-align:center;">This website was last updated on <i>May 26, 2024</i>.</p>
+        <br>
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
