--- a/teaching.html
+++ b/teaching.html
@@ -9,6 +9,7 @@
     <div id="page-container">
       <nav id="navbar">
         <ul id="navlist">
+          <li><a href="etc.html">etc</a></li>
           <li><a href="cv.html">CV</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="#" id="navActive">Teaching</a></li>
