add conference talks section

--- a/research.html
+++ b/research.html
@@ -18,14 +18,29 @@
       </nav>
       <div id="content-wrap">
         <h1>Research</h1>
-        <p>I'm still trying to figure out what my primary area of interest is. My undergraduate senior thesis
+        <p>
+          I'm still trying to figure out what my primary area of interest is. My undergraduate senior thesis
           (advised by <a href="https://www.math.colostate.edu/~renzo/" target="_blank" rel="noopener noreferrer">Dr. Renzo Cavalieri</a> at <a href="https://mathematics.colostate.edu/" target="_blank" rel="noopener noreferrer">Colorado State University</a>)
           was on <a href="https://en.wikipedia.org/wiki/Branched_covering" target="_blank" rel="noopener noreferrer">covers</a> of abstract <a href="https://en.wikipedia.org/wiki/Tropical_geometry" target="_blank" rel="noopener noreferrer">tropical</a> curves,
           which falls quite squarly in the world of <a href="https://en.wikipedia.org/wiki/Algebraic_geometry" target="_blank" rel="noopener noreferrer">algebraic geometry</a>. However, I am not set on that. I've also taken an
           interest in <a href="https://en.wikipedia.org/wiki/Algebraic_combinatorics" target="_blank" rel="noopener noreferrer">algebraic combinatorics</a>
-          over the past year or so. I'm excited to see what speaks to me over the next few years! <i>Both of the below pictures were taken from their respective Wikipedia articles.</i></p>
-          <img src="media/fano.png" alt="The Fano Plane" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
-          <img src="media/tropical.png" alt="A tropical cubic curve" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
+          over the past year or so. I'm excited to see what speaks to me over the next few years! <i>Both of the below pictures were taken from their respective Wikipedia articles.</i>
+        </p>
+        <img src="media/fano.png" alt="The Fano Plane" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
+        <img src="media/tropical.png" alt="A tropical cubic curve" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
+
+        <br>
+
+        <h3>Conference Talks Given</h3>
+        
+        <ol>
+          <li>
+            <a href="http://www.fields.utoronto.ca/activities/23-24/SpecQ" target="_blank" rel="noopener noreferrer">Spec(Q¯(2<i>πi</i>))</a>,
+            June 19, 2024<br>
+            <i>Covers of Abstract Tropical Curves</i>
+          </li>
+        </ol>
+
 
       </div>
       <footer>
