--- a/research.html
+++ b/research.html
@@ -32,12 +32,13 @@
         <br>
 
         <h3>Conference Talks Given</h3>
-        
+
         <ol>
           <li>
+            <p>June 19, 2024,
             <a href="http://www.fields.utoronto.ca/activities/23-24/SpecQ" target="_blank" rel="noopener noreferrer">Spec(Q¯(2<i>πi</i>))</a>,
-            June 19, 2024<br>
-            <i>Covers of Abstract Tropical Curves</i>
+            Fields Institute, Toronto, ON.</p>
+            <p id="talk-title">Covers of Abstract Tropical Curves</p>
           </li>
         </ol>
 
