start main page; minor style change

--- a/etc.html
+++ b/etc.html
@@ -16,7 +16,7 @@
           <li><a href="index.html">Main</a></li>
         </ul>
       </nav>
-      <div id="content-wrap">
+      <div id="content-wrap" style="width:75%;">
         <h1>Other Stuff</h1>
 
         <p>This page is just the amalgamation of anything non-academic that I felt like putting on this website.
@@ -24,11 +24,6 @@
       some overlap between people who are into math and people who are into linguistics. From a philosophical perspective, I suppose they are similar subjects.</p>
         <hr>
 
-        <p>I love cats! Below are some pictures of the cats I had as a kid; the white/grey one was adopted when I was nine years old, and he's still thriving at my parents' house. The black one is a few years younger.</p>
-        <img src="media/cat1.jpg" alt="Grey cat on a pillow" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
-        <img src="media/cat2.jpg" alt="Grey cat on a cat tree" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
-        <img src="media/cat3.jpg" alt="Black and grey cats on a windowsill" style="float:right;width:20%;height:auto;padding-left:20px;padding-bottom:10px;"/>
-        <hr>
         <p>If you're interested, feel free to check out my <a href="https://github.com/EvePidcock" target="_blank" rel="noopener noreferrer">GitHub</a> page. I can't guarantee that any of the code there is "good";
         some of it was written many years ago when I was in high school.</p>
         <br>
@@ -36,6 +31,7 @@
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
+        <p style="text-align:center;">This page was last updated on <i>June 27, 2024</i>.</p>
       </footer>
     </div>
   </body>
