--- a/index.html
+++ b/index.html
@@ -17,18 +17,31 @@
         </ul>
       </nav>
       <div id="content-wrap">
-        <h1>Evelyn Pidcock</h1>
-
-        <p>Hello! If you're seeing this, that means this page is still under construction. Check back later!</p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div style="float:left;">
+          <h1>Evelyn Pidcock</h1>
+          <h4>MSB ####</h4>
+          <h4>ejpidcock [at] ucdavis [dot] edu</h4>
+        </div>
+        <div style="float:right;">
+          <!--there will eventually be a picture here-->
+        </div>
 
         <hr>
-        <p style="text-align:center;">This website was last updated on <i>June 24, 2024</i>.</p>
-        <br>
+
+        <div style="width:75%;">
+          <p>
+            Hello! I'm Evelyn Pidcock (she/her), a first-year mathematics PhD student at the <a href="https://www.math.ucdavis.edu/" target="_blank" rel="noopener noreferrer">University of California, Davis</a>.
+            Before arriving at Davis, I was an undergraduate at <a href="https://mathematics.colostate.edu/" target="_blank" rel="noopener noreferrer">Colorado State University</a> in Fort Collins, Colorado.
+          </p>
+          <p>
+            Current students should check out the <a href="teaching.html">teaching page</a> for information regarding office hours, etc.
+          </p>
+        </div>
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
+        <p style="text-align:center;">This page was last updated on <i>June 27, 2024</i>.</p>
       </footer>
     </div>
   </body>
