--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div id="content-wrap">
         <div style="float:left;">
           <h1>Evelyn Pidcock</h1>
-          <h4>MSB ####</h4>
-          <h4>ejpidcock [at] ucdavis [dot] edu</h4>
+          <h4>Office: MSB ####</h4>
+          <h4>Contact: ejpidcock [at] ucdavis [dot] edu</h4>
         </div>
         <div style="float:right;">
           <!--there will eventually be a picture here-->
@@ -34,14 +34,14 @@
             Before arriving at Davis, I was an undergraduate at <a href="https://mathematics.colostate.edu/" target="_blank" rel="noopener noreferrer">Colorado State University</a> in Fort Collins, Colorado.
           </p>
           <p>
-            Current students should check out the <a href="teaching.html">teaching page</a> for information regarding office hours, etc.
+            Current students should check out the <a href="teaching.html">teaching page</a> or the course Canvas page for information regarding office hours, grading, etc.
           </p>
         </div>
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p style="text-align:center;">This page was last updated on <i>June 27, 2024</i>.</p>
+        <p style="text-align:center;">This page was last updated on <i>July 5, 2024</i>.</p>
       </footer>
     </div>
   </body>
