--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,8 @@
         <h1>CV</h1>
         <p id="main-block">
           Embedded below is a (hopefully) current copy of my CV. Check the date at the bottom of the document to see when it was last updated.
-          If the embedding appears as a blank box, try refreshing the page. If that still doesn't work, <a href="https://github.com/EvePidcock/CV-TeX/raw/main/EvelynPidcockCV.pdf">here is a link</a> to download the pdf.
+          If the embedding appears as a blank box, try refreshing the page a few times; sometimes three or four refreshes are needed, for some reason.
+          If that still doesn't work, <a href="https://github.com/EvePidcock/CV-TeX/raw/main/EvelynPidcockCV.pdf">here is a link</a> to download the pdf.
         </p>
         <center>
           <iframe src="https://docs.google.com/viewer?url=https://github.com/EvePidcock/CV-TeX/raw/main/EvelynPidcockCV.pdf&embedded=true" style="width:75%; height:500px;"></iframe>
@@ -28,7 +29,7 @@
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p style="text-align:center;">This page was last updated on <i>June 27, 2024</i>.</p>
+        <p style="text-align:center;">This page was last updated on <i>August 4, 2024</i>.</p>
       </footer>
     </div>
   </body>
