--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p style="text-align:center;">This page was last updated on <i>August 4, 2024</i>.</p>
+        <p style="text-align:center;">This page (<i>not</i> the CV) was last updated on <i>August 4, 2024</i>.</p>
       </footer>
     </div>
   </body>
