--- a/teaching.html
+++ b/teaching.html
@@ -17,13 +17,20 @@
       </nav>
       <div id="content-wrap">
         <h1>Teaching</h1>
-
+        <h3>Current Courses</h3>
+        <ul><li>Teaching Assistant, TBD</li></ul>
+        
+        <!-- <h3>Past Courses</h3>
+        <h5>Graduate Teaching Assistant</h5>
+        <ul><li></li></ul>
+        <h5>Instructor of Record</h5>
+        -->
 
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p style="text-align:center;">This page was last updated on <i>June 27, 2024</i>.</p>
+        <p style="text-align:center;">This page was last updated on <i>August 4, 2024</i>.</p>
       </footer>
     </div>
   </body>
