add latex formatting to research page

--- a/research.html
+++ b/research.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Evelyn Pidcock | Research</title>
     <link rel="stylesheet" href="style.css">
+    <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </head>
   <body>
     <div id="page-container">
@@ -35,7 +38,7 @@
         <ol>
           <li>
             <p>June 19, 2024,
-            <a href="http://www.fields.utoronto.ca/activities/23-24/SpecQ" target="_blank" rel="noopener noreferrer">Spec(Q¯(2<i>πi</i>))</a>,
+            <a href="http://www.fields.utoronto.ca/activities/23-24/SpecQ" target="_blank" rel="noopener noreferrer">Spec\((\bar{\mathbb{Q}}(2\pi i))\)</a>,
             Fields Institute, Toronto, ON.</p>
             <p id="talk-title">Covers of Abstract Tropical Curves</p>
           </li>
@@ -46,7 +49,7 @@
       <footer>
         <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p style="text-align:center;">This page was last updated on <i>June 27, 2024</i>.</p>
+        <p style="text-align:center;">This page was last updated on <i>August 16, 2024</i>.</p>
       </footer>
     </div>
   </body>
