add p tag to course list

--- a/teaching.html
+++ b/teaching.html
@@ -18,7 +18,7 @@
       <div id="content-wrap">
         <h1>Teaching</h1>
         <h3>Current Courses</h3>
-        <ul><li>Teaching Assistant, TBD</li></ul>
+        <ul><li><p>Teaching Assistant, TBD</p></li></ul>
         
         <!-- <h3>Past Courses</h3>
         <h5>Graduate Teaching Assistant</h5>
