--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="content-wrap">
         <div style="float:left;">
           <h1>Evelyn Pidcock</h1>
-          <h4>Office: MSB ####</h4>
+          <h4>Office: MSB 2232</h4>
           <h4>Contact: ejpidcock [at] ucdavis [dot] edu</h4>
         </div>
         <div style="float:right;">
@@ -38,7 +38,7 @@
         </div>
       </div>
       <footer>
-        <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
+        <p><i id="footerlabels">Office:</i> MSB 2232 | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
         <p style="text-align:center;">This page was last updated on <i>July 5, 2024</i>.</p>
       </footer>
