--- a/teaching.html
+++ b/teaching.html
@@ -19,7 +19,7 @@
         <h1>Teaching</h1>
         <h3>Current Courses</h3>
         <ul><li><p>Teaching Assistant, TBD</p></li></ul>
-        
+
         <!-- <h3>Past Courses</h3>
         <h5>Graduate Teaching Assistant</h5>
         <ul><li></li></ul>
@@ -28,7 +28,7 @@
 
       </div>
       <footer>
-        <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
+        <p><i id="footerlabels">Office:</i> MSB 2232 | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
         <p style="text-align:center;">This page was last updated on <i>August 4, 2024</i>.</p>
       </footer>
