--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
         </center>
       </div>
       <footer>
-        <p><i id="footerlabels">Office:</i> MSB #### | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
+        <p><i id="footerlabels">Office:</i> MSB 2232 | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
         <p style="text-align:center;">This page (<i>not</i> the CV) was last updated on <i>August 4, 2024</i>.</p>
       </footer>
