--- a/teaching.html
+++ b/teaching.html
@@ -17,15 +17,8 @@
       </nav>
       <div id="content-wrap">
         <h1>Teaching</h1>
-        <h3>Current Courses</h3>
-        <ul><li><p>Teaching Assistant, TBD</p></li></ul>
-
-        <!-- <h3>Past Courses</h3>
-        <h5>Graduate Teaching Assistant</h5>
-        <ul><li></li></ul>
-        <h5>Instructor of Record</h5>
-        -->
-
+        <h3>Graduate Teaching Assistant</h3>
+        <ul><li><p>Mat 21A (Differential Calculus), Fall 2024</p></li></ul>
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB 2232 | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
