add wi25 course

--- a/teaching.html
+++ b/teaching.html
@@ -18,12 +18,15 @@
       <div id="content-wrap">
         <h1>Teaching</h1>
         <h3>Graduate Teaching Assistant</h3>
-        <ul><li><p>Mat 21A (Differential Calculus), Fall 2024</p></li></ul>
+        <ul>
+          <li><p>Mat 19A (Calculus for Data-Driven Applications), Winter 2025</p></li>
+          <li><p>Mat 21A (Differential Calculus), Fall 2024</p></li>
+        </ul>
       </div>
       <footer>
         <p><i id="footerlabels">Office:</i> MSB 2232 | <i id="footerlabels">Contact:</i> ejpidcock [at] ucdavis [dot] edu</p>
         <p id="footerlinks"><a href="index.html">Main</a> | <a href="teaching.html">Teaching</a> | <a href="research.html">Research</a> | <a href="cv.html">CV</a></p>
-        <p style="text-align:center;">This page was last updated on <i>September 17, 2024</i>.</p>
+        <p style="text-align:center;">This page was last updated on <i>December 18, 2024</i>.</p>
       </footer>
     </div>
   </body>
